--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-dev",
   "description": "Nested todolist with effector keyvalue implementation",
   "author": "zerobias",
+  "private": true,
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -37,7 +38,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@craco/craco": "^6.2.0",
+    "@craco/craco": "^6.4.5",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -53,38 +54,39 @@
     "@typescript-eslint/parser": "^4.28.3",
     "craco-alias": "^3.0.1",
     "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-xo-react": "^0.25.0",
-    "eslint-config-xo-space": "^0.28.0",
-    "eslint-config-xo-typescript": "^0.43.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-xo-react": "^0.27.0",
+    "eslint-config-xo-space": "^0.33.0",
+    "eslint-config-xo-typescript": "^0.52.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.6.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unicorn": "^34.0.1",
-    "husky": "^7.0.1",
-    "lint-staged": "^11.0.1",
+    "eslint-plugin-unicorn": "^43.0.2",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "madge": "^5.0.1",
-    "micromatch": "^4.0.4",
+    "micromatch": "^4.0.5",
+    "postcss-normalize": "^10.0.1",
     "prettier": "^2.7.1",
-    "react-scripts": "4.0.3",
-    "shx": "^0.3.3",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
+    "react-scripts": "5.0.1",
+    "shx": "^0.3.4",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-config-xo-scss": "^0.14.0",
-    "stylelint-config-xo-space": "^0.15.1",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-xo-scss": "^0.15.0",
+    "stylelint-config-xo-space": "^0.16.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.3.0",
     "typescript": "^4.7.4",
     "typescript-coverage-report": "^0.6.4"
   },
