no idea why vite react plugin is not working

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,4 @@
-# Dependencies
+dist
 node_modules
-
-# Lock file (use yarn.lock)
-package-lock.json
-
-# DotEnv
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Built files
-build
-coverage
-typescript
-
-# IDE
-.idea
-.vscode
-
-# Misc
-.temp
-.npm
-.cache
-.*-cache
-
-# System
-*.DS_Store
-.AppleDouble
-.LSOverride
-Thumbs.db
-ehthumbs.db
-*.lnk
-
-# Logs
+.DS_Store
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
