--- a/apps/todo-app/tsconfig.json
+++ b/apps/todo-app/tsconfig.json
@@ -19,5 +19,5 @@
     "jsx": "react-jsx"
   },
   "files": [],
-  "include": ["**/*.js", "**/*.ts", "src"]
+  "include": ["**/*.js", "**/*.ts", "./src/view.tsx"]
 }
