--- a/package.json
+++ b/package.json
@@ -1,43 +1,42 @@
 {
-  "name": "@effector/keyval-dev",
-  "version": "0.0.0-dev",
-  "description": "Nested todolist with effector keyvalue implementation",
+  "name": "@effector/keyval",
+  "version": "0.0.0",
   "author": "zerobias",
-  "private": true,
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/effector/keyval.git"
-  },
-  "engines": {
-    "node": "18"
-  },
+  "packageManager": "pnpm@7.28.0",
   "scripts": {
-    "start": "cross-env NODE_ENV=development DISABLE_ESLINT_PLUGIN=true craco start",
-    "build": "cross-env NODE_ENV=production DISABLE_ESLINT_PLUGIN=true craco build",
-    "test": "cross-env NODE_ENV=test craco test --watchAll=false",
-    "qa": "yarn ts && yarn lint && yarn codestyle && yarn deps && yarn test",
-    "fix": "yarn eslint --fix && yarn stylelint --fix && yarn format",
-    "lint": "yarn eslint && yarn stylelint",
-    "eslint": "eslint '**/*.{js,jsx,ts,tsx}' --quiet",
-    "stylelint": "stylelint '**/*.{css,scss,html}' --quiet",
-    "format": "prettier '**/*' --write --ignore-unknown --loglevel warn",
-    "codestyle": "prettier '**/*' --check --ignore-unknown",
-    "deps": "yarn madge src --circular",
-    "ts": "tsc -p tsconfig.json",
-    "ts-files": "tsc --listFiles -p tsconfig.json",
-    "ts-cov": "shx mkdir -p coverage/typescript && typescript-coverage-report -s -t 98 -o coverage/typescript -p tsconfig.base.json",
-    "test-cov": "yarn test --coverage",
-    "prepare": "husky install",
-    "precommit": "yarn lint-staged"
+    "test": "nx run-many --target=test --all",
+    "test:watch": "nx run-many --target=test_watch --all --args=\"--\"",
+    "test:types": "nx run-many --target=typetest --all",
+    "lint": "nx run-many --target=lint --all",
+    "lint:format": "nx format:check --all",
+    "lint:workspace": "nx workspace-lint",
+    "lint:changes": "changeset status",
+    "build": "nx run-many --target=build --all",
+    "format": "nx format:write",
+    "size": "nx run-many --target=size --all",
+    "changes": "changeset"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^3.1.0",
     "effector": "^22.3.0",
     "effector-react": "^22.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-typescript": "~7.18.6",
+    "@changesets/cli": "^2.24.1",
+    "@nrwl/cli": "15.6.3",
+    "@nrwl/devkit": "15.6.3",
+    "@nrwl/eslint-plugin-nx": "15.6.3",
+    "@nrwl/js": "15.6.3",
+    "@nrwl/linter": "15.6.3",
+    "@nrwl/vite": "15.6.3",
+    "@nrwl/web": "15.6.3",
+    "@nrwl/workspace": "15.6.3",
+    "@size-limit/file": "^7.0.8",
     "@types/eslint": "^7.28.0",
     "@types/jest": "^26.0.24",
     "@types/micromatch": "^4.0.2",
@@ -47,8 +46,10 @@
     "@types/stylelint": "^13.13.1",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
-    "cross-env": "^7.0.3",
+    "@vitest/ui": "^0.25.8",
+    "bytes-iec": "^3.1.1",
     "dotenv": "^16.0.1",
+    "effector": "^22.5.0",
     "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -65,9 +66,14 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unicorn": "^43.0.2",
     "micromatch": "^4.0.5",
+    "nx": "15.6.3",
     "postcss-normalize": "^10.0.1",
     "prettier": "^2.7.1",
+    "rollup": "^3.4.0",
+    "rollup-plugin-dts": "^5.0.0",
+    "semver-parser": "^4.0.1",
     "shx": "^0.3.4",
+    "size-limit": "^7.0.8",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
@@ -77,8 +83,11 @@
     "stylelint-config-xo-space": "^0.16.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.3.0",
-    "typescript": "^4.7.4",
-    "typescript-coverage-report": "^0.6.4"
+    "typescript": "^4.8.4",
+    "typescript-coverage-report": "^0.6.4",
+    "vite": "^4.0.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.26.2"
   },
   "keywords": []
 }
