--- a/apps/todo-app/package.json
+++ b/apps/todo-app/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@withease/i18next",
+  "name": "@effector/core-react-demo",
   "version": "0.1.0",
   "type": "commonjs",
   "devDependencies": {
-    "@vitejs/plugin-react": "^3.1.0"
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.2.1"
   }
 }
