--- a/packages/core/.eslintrc.json
+++ b/packages/core/.eslintrc.json
@@ -17,8 +17,7 @@
     {
       "files": ["*.type_spec.ts"],
       "rules": {
-        "no-unused-labels": "off",
-        "@typescript-eslint/no-unused-vars": "off"
+        "no-unused-labels": "off"
       }
     }
   ]
