--- a/apps/todo-app/package.json
+++ b/apps/todo-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@effector/core-react-demo",
   "version": "0.1.0",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.1"
