checked changeset workflow

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,6 +5,6 @@
   "fixed": [],
   "linked": [],
   "access": "public",
-  "baseBranch": "origin/master",
+  "baseBranch": "feat/release-flow",
   "updateInternalDependencies": "patch"
 }
