--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@effector/keyval-core",
+  "name": "@keyval/core",
   "version": "0.1.0",
   "type": "commonjs",
   "peerDependencies": {
