--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "keyval-core",
+  "name": "core",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/core/src",
   "projectType": "library",
@@ -32,7 +32,7 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs keyval-core"
+        "command": "node tools/scripts/publish.mjs core"
       },
       "dependsOn": [
         {
