--- a/packages/react/project.json
+++ b/packages/react/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "keyval-react",
+  "name": "react",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/react/src",
   "projectType": "library",
@@ -32,7 +32,7 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs keyval-react"
+        "command": "node tools/scripts/publish.mjs react"
       },
       "dependsOn": [
         {
